fixed bonus reward not showing up + wrapped experimentTrials in a closure

--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ body.animate .popover {
 }
 
 .popover.addItem,
-.popover.addPeople,
+.popover.AddPeople,
 .popover.addList {
     display: none!important;
 }
